# algo-cg

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml  dev-config.toml
algo-core/: Cargo.toml
algo-core/src/: card.rs  event.rs  lib.rs  player.rs  settings.rs
client/: Cargo.toml
client/src/: button.rs  home.rs  inspector.rs  lib.rs  lobby.rs  log_display.rs  main.rs  util.rs
client/src/client/: event.rs  event_handler.rs  event_relay.rs  mod.rs  response.rs
client/src/game/: card_field.rs  dialog.rs  mod.rs  utils.rs
client/src/game/card/: attacker.rs  effects.rs  flip_animation.rs  guessing.rs  instance.rs  material.rs  mesh.rs  mod.rs  name.rs  picking.rs  tag.rs
client/src/game/p2/: board_change.rs  mod.rs  response.rs
client/src/game/p2/ui/: history.rs  image_handles.rs  mod.rs  popup.rs
client/src/game/sandbox/: attacker.rs  camera_control.rs  mod.rs  my_turn.rs  talon.rs
client/src/utils/: add_observer_ext.rs  animate_once.rs  button.rs  component_based.rs  into_color.rs  log_display.rs  mod.rs  observe_once.rs  observer_controller.rs  scrollable.rs  set_timeout.rs  world_to_2d.rs
protocol/: Cargo.toml
protocol/src/: client_to_server.rs  events.rs  lib.rs  server_to_client.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/game/: mod.rs  player_handler.rs
utils/async-write-bincode/: Cargo.toml
utils/async-write-bincode/src/: lib.rs
utils/bincode-io/: Cargo.toml
utils/bincode-io/src/: lib.rs
