[workspace]
members = ["client", "protocol", "server"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
tokio = { "version" = "1.43.0", "features" = ["full"] }
anyhow = "1.0.95"
bincode = "1.3.3"
