[workspace]
members = ["algo-core", "utils/*", "client", "protocol", "server"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[workspace.dependencies]
anyhow = "1.0.95"
bincode = "1.3.3"
itertools = "0.14.0"
rand = "0.8.5"
thiserror = "2.0.11"
tokio = { "version" = "1.43.0", "features" = ["full"] }
serde = "1.0.217"
