[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
argh = "0.1.13"
bevy = { version = "0.15.1", features = ["bevy_remote"] }
bevy_dev_tools = "0.15.1"
bevy_simple_text_input = "0.10.1"
bincode = { workspace = true }
protocol = { path = "../protocol" }
rand = "0.8.5"
serde = "1.0.217"
thiserror = "2.0.11"
tokio = { workspace = true }
tokio-util = { version = "0.7.13", features = ["full"] }
