[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
algo-core = { path = "../algo-core" }
anyhow = { workspace = true }
argh = "0.1.13"
async-write-bincode = { path = "../utils/async-write-bincode" }
bevy = { version = "0.15.1", features = ["bevy_remote"] }
bevy_infinite_grid = "0.14.1"
bevy_simple_text_input = "0.10.1"
bincode = { workspace = true }
fontdue = "0.9.2"
image = "0.25.5"
protocol = { path = "../protocol" }
serde = { workspace = true }
slab = "0.4.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.13", features = ["full"] }

# for sandbox, debugging
bevy_dev_tools = "0.15.1"
bevy-inspector-egui = "0.29.1"
# bevy_remote_inspector = "0.1.0"
rand = { workspace = true }
itertools = { workspace = true }

# bevy_mod_outline
[dependencies.bevy_mod_outline]
git = "https://github.com/komadori/bevy_mod_outline"
rev = "3bd8357"
