[package]
name = "client"
version = "0.1.0"
edition = "2021"

[features]
default = ["dev"]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
]

[dependencies]
algo-core = { path = "../algo-core" }
anyhow = { workspace = true }
argh = "0.1.13"
bevy = { version = "0.15.1", features = ["ghost_nodes"] }
bevy_infinite_grid = "0.14.1"
bevy_simple_text_input = "0.10.1"
bincode = { workspace = true }
bincode-io = { path = "../utils/bincode-io" }
fontdue = "0.9.2"
image = "0.25.5"
protocol = { path = "../protocol" }
serde = { workspace = true }
slab = "0.4.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.13", features = ["full"] }

# for sandbox, debugging
bevy-inspector-egui = "0.29.1"
# bevy_remote_inspector = "0.1.0"
rand = { workspace = true }
itertools = { workspace = true }

# bevy_mod_outline
[dependencies.bevy_mod_outline]
git = "https://github.com/komadori/bevy_mod_outline"
rev = "3bd8357"
