[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
algo-core = { path = "../algo-core" }
anyhow = { workspace = true }
bincode = { workspace = true }
bincode-io = { path = "../utils/bincode-io" }
env_logger = "0.11.6"
protocol = { path = "../protocol" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
